src/objects/KS_Historial_Laboral__c.object
<CustomObject>
    <description>KAIZENSTEP. DESACTIVADO. Recoge la evolución laboral de un contacto. Posiblemente borrar.</description>
    <fields>
        <fullName>KS_Contacto__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contacto</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Historiales Laborales</relationshipLabel>
        <relationshipName>Historiales_Laborales</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Empresa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Empresa</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Historiales Laborales</relationshipLabel>
        <relationshipName>Historiales_Laborales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_fin__c</fullName>
        <label>Fecha de fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KS_Fecha_de_inicio__c</fullName>
        <label>Fecha de inicio</label>
        <type>Date</type>
    </fields>
    <label>Historial Laboral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>IL</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historiales Laborales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>